# laser-ablation-lab

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.copilot/: config.json
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml.disabled
docs/: project_plan.md
scripts/: fix_gpg_globally.sh  project_summary.py  setup_dev_environment.sh
src/ablab/: __init__.py  constants.py  units.py
src/ablab/mission/: __init__.py
src/ablab/physics/: heat_diffusion.py
tests/: __init__.py  test_constants.py
