[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laser-ablation-lab"
version = "0.1.0"
description = "Open models and mission trades for laser ablation and laser-induced disruption of small bodies"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Laser Ablation Lab Contributors", email = "contributors@laser-ablation-lab.org"}
]
maintainers = [
    {name = "Laser Ablation Lab Contributors", email = "contributors@laser-ablation-lab.org"}
]
keywords = [
    "laser-ablation",
    "asteroid-deflection", 
    "planetary-defense",
    "space-physics",
    "simulation",
    "aerospace-engineering"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.6.0",
    "plotly>=5.12.0",
    "pandas>=1.5.0",
    "h5py>=3.8.0",
    "netcdf4>=1.6.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.64.0",
    "numba>=0.56.0",
    "astropy>=5.2.0",
    "spiceypy>=5.1.0",
    "trimesh>=3.15.0",
    "shapely>=2.0.0",
    "filterpy>=1.4.5"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.1.0",
    "black>=22.12.0",
    "ruff>=0.0.200",
    "mypy>=1.0.0",
    "pre-commit>=2.21.0",
    "sphinx>=5.3.0",
    "sphinx-rtd-theme>=1.2.0",
    "nbsphinx>=0.8.12",
    "jupyter>=1.0.0",
    "jupyterlab>=3.5.0",
    "ipywidgets>=8.0.0"
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.5.0",
    "mkdocs-jupyter>=0.22.0",
    "mkdocstrings[python]>=0.19.0",
    "pymdown-extensions>=9.9.0"
]
performance = [
    "cupy-cuda11x>=11.0.0; platform_machine=='x86_64'",
    "jax[cpu]>=0.4.0",
    "jaxlib>=0.4.0"
]
all = [
    "laser-ablation-lab[dev,docs,performance]"
]

[project.urls]
Homepage = "https://github.com/laser-ablation-lab/laser-ablation-lab"
Repository = "https://github.com/laser-ablation-lab/laser-ablation-lab.git"
Documentation = "https://laser-ablation-lab.readthedocs.io"
"Bug Reports" = "https://github.com/laser-ablation-lab/laser-ablation-lab/issues"
"Source Code" = "https://github.com/laser-ablation-lab/laser-ablation-lab"

[project.scripts]
ablation-sim = "ablab.cli:main"
ablation-convert = "ablab.tools.convert_units:main"
ablation-validate = "ablab.tools.validate_materials:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ablab = ["data/*.yaml", "data/*.json", "scenarios/*.yaml"]

# Black code formatting
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# Ruff linting
[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG001", # unused-function-argument
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "Q",    # flake8-quotes
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long, handled by black
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
]

[tool.ruff.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252"]
"scripts/**/*" = ["T201"]
"docs/**/*" = ["T201"]

[tool.ruff.isort]
force-sort-within-sections = true
known-first-party = ["ablab"]

# MyPy type checking
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "matplotlib.*",
    "plotly.*",
    "trimesh.*",
    "spiceypy.*",
    "netcdf4.*",
    "numba.*",
    "filterpy.*"
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/ablab",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=85"
]
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "physics: marks tests as physics validation tests",
    "performance: marks tests as performance benchmarks"
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\):",
    "@(abc\.)?abstractmethod"
]
